# KaesuGaesuA

./: build.gradle  gradle.properties  settings.gradle
BaseGameUtils/: build.gradle
app/: build.gradle  lint-baseline.xml  proguard-project.txt  proguard-rules.pro
app/src/debug/res/values/: strings.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/sprite/: back00.pkm  back01.pkm  back02.pkm  back03.pkm  back04.pkm  back05.pkm  back06.pkm  back07.pkm  back08.pkm  back09.pkm  back10.pkm  back11.pkm  back12.pkm  back13.pkm  back14.pkm  back15.pkm  back16.pkm  back17.pkm  back18.pkm  back19.pkm  back20.pkm  back21.pkm  back22.pkm  back23.pkm
app/src/main/cpp/: Button.cpp  Button.h  CMakeLists.txt  SceneCommon.cpp  SceneCommon.h  android_main.cpp
app/src/main/cpp/Game/: Game.cpp  Game.h  Panel.cpp  Panel.h
app/src/main/cpp/sys/: CMakeLists.txt  Engine.cpp  Engine.h  FrameBuffer.cpp  FrameBuffer.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Sound.cpp  Sound.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  TouchPanel.cpp  TouchPanel.h  common.h  included.c  included.cpp
app/src/main/cpp/sys/Tremor/ogg/: config_types.h
app/src/main/cpp/sys/libpng/: README.rst
app/src/main/java/app/: AppActivity.java
app/src/main/java/jp/so_raseene/kaesu/: AppActivity.java
app/src/main/java/sys/: BaseActivity.java  PlayGamesActivity.java  SoundManager.java
app/src/main/jni/: Android.mk  AppMain.cpp  Application.mk  def.h
app/src/main/jni/app/: Button.cpp  Button.h  Scene.cpp  Scene.h  scene_kind.h
app/src/main/jni/app/Game/: Game.cpp  Game.h  Panel.cpp  Panel.h
app/src/main/jni/sys/: FrameBuffer.cpp  FrameBuffer.h  Renderer.cpp  Renderer.h  Sound.cpp  Sound.h  Sprite.cpp  Sprite.h  SysMain.cpp  Texture.cpp  Texture.h  TouchPanel.cpp  TouchPanel.h  common.h
app/src/main/jni/sys/Tremor/: Android.mk
app/src/main/res/drawable/: shape_button.xml
app/src/main/res/drawable-xhdpi/: shape_button.xml
app/src/main/res/layout/: apps_item.xml  apps_page.xml  play_games_dialog.xml  privacy_policy.xml
app/src/main/res/values/: apps.xml  dimens.xml  games-ids.xml  nend.xml  strings.xml  themes.xml
app/src/main/res/values-sw600dp/: dimens.xml
nendSDK/: build.gradle
